# Demonclock

./: .env.example  .gitignore  pyproject.toml
demonclock/: __init__.py  __main__.py  actions.py  behavior.py  boss.py  canon.py  clock.py  combat.py  db.py  economy.py  enemies.py  events.py  game.py  history.py  knowledge.py  models.py  newspaper.py  parser.py  player.py  pool.py  resolve.py  rumors.py  seed.py  setback.py  sim.py  skills.py  state.py  world.py
demonclock/generation/: __init__.py  context.py  director.py  flavor.py  narrator.py  pipeline.py  places.py  quest.py  story.py
demonclock/llm/: __init__.py  base.py  config.py  errors.py  registry.py  schema.py
demonclock/llm/providers/: __init__.py  gemini.py  mock.py
tests/: test_actions.py  test_behavior.py  test_boss.py  test_canon.py  test_clock.py  test_combat.py  test_economy.py  test_generation.py  test_history.py  test_knowledge.py  test_llm.py  test_narrator.py  test_newspaper.py  test_parser.py  test_persistence.py  test_pool.py  test_resolve.py  test_rumors.py  test_setback.py  test_sim.py  test_skills.py  test_world.py
